--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <!-- Bootstrap CDN -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
-    <!-- link to stylesheet (always require after Bootstrap) -->
-
+    <link rel="stylesheet" href="style.css">
     <!-- link to javascript file -->
 
     <title>Tic Tac Toe</title>
@@ -23,6 +22,7 @@
           <hr>
         </div>
       </div>
+
       <div class="row">
 
         <!-- a column represents our game board -->
@@ -31,25 +31,51 @@
 
           <!-- you can put rows inside of columns! -->
           <!-- our board has 3 rows, each with 3 columns inside -->
-          <div class="row">
-            <div class="col-xs-4 box"></div>
-            <div class="col-xs-4 box"></div>
-            <div class="col-xs-4 box"></div>
+          <div class="row display-table">
+            <div class="col-xs-4 box display-cell">
+              <h1 id="a">-</h1>
+            </div>
+            <div class="col-xs-4 box display-cell">
+              <h1 id="b">-</h1>
+            </div>
+            <div class="col-xs-4 box display-cell">
+              <h1 id="c">-</h1>
+            </div>
           </div>
 
-          <div class="row">
-            <div class="col-xs-4 box"></div>
-            <div class="col-xs-4 box"></div>
-            <div class="col-xs-4 box"></div>
+          <div class="row display-table">
+            <div class="col-xs-4 box display-cell">
+              <h1 id="d">-</h1>
+            </div>
+            <div class="col-xs-4 box display-cell">
+              <h1 id="e">-</h1>
+            </div>
+            <div class="col-xs-4 box display-cell">
+              <h1 id="f">-</h1>
+            </div>
           </div>
 
-          <div class="row">
-            <div class="col-xs-4 box"></div>
-            <div class="col-xs-4 box"></div>
-            <div class="col-xs-4 box"></div>
+          <div class="row display-table">
+            <div class="col-xs-4 box display-cell">
+              <h1 id="g">-</h1>
+            </div>
+            <div class="col-xs-4 box display-cell">
+              <h1 id="h">-</h1>
+            </div>
+            <div class="col-xs-4 box display-cell">
+              <h1 id="i">-</h1>
+            </div>
           </div>
         </div>
       </div>
+      <div class="container">
+      <div class="row text-center">
+        <div class="col-md-12">
+          <button type="button" class="btn btn-default btnpad" id="reset">Reset</button>
+          <button type="button" class="btn btn-default btnpad" id="play">Play</button>
+        </div>
+      </div>
     </div>
+    <script src="ticTacToe.js"></script>
   </body>
 </html>
